--- a/css/header.css
+++ b/css/header.css
@@ -1,98 +1,63 @@
-.content-top {
-  background: #1A36A8;
-  border-bottom: 1px solid rgba(189, 188, 188, 0.379);
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
+* {
+  font-family: "Open Sans", sans-serif;
 }
 
-.content-header {
+body {
   background: #1A36A8;
 }
 
-.col-iz__title {
+.text-medio {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.text-titulos {
   font-size: 56px;
   font-weight: 700;
-  color: white;
-  padding-left: 10%;
 }
-.col-iz__title span {
+
+.text-titulos span {
   font-size: 40px;
 }
 
-.text-one {
-  font-size: 24px;
-  font-weight: 500;
-}
-
-.text-mas {
-  line-height: 24px;
-}
-
-.sub-cyber {
-  padding-left: 18%;
-}
-
-.r-fecha {
+.text-fecha {
   font-size: 28px;
-  font-weight: 500;
-  color: white;
-  padding-left: 9%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  font-weight: 600;
 }
-.r-fecha span {
+
+.text-fecha span {
   font-weight: 700;
 }
 
 .img-cupon {
-  padding-left: 9%;
+  width: 85%;
 }
 
-.formulario label {
-  font-size: 16px;
-  color: #B7B1A9;
+.catcha {
+  width: 98%;
 }
-.formulario input::placeholder {
-  color: #B7B1A9;
-}
-.formulario select {
-  color: #1A36A8;
-  border-color: #1A36A8;
-}
-.formulario .catcha {
-  width: 100%;
-}
-.formulario .check-bold {
+
+.text-final {
   font-size: 14px;
 }
-.formulario .check-bold span {
-  font-weight: 700;
-  color: #1A36A8;
-}
-.formulario .btn-re {
-  padding: 24px 80px;
-  background-color: #E3E3E3;
-  border-color: #E3E3E3;
-}
-.formulario .text-final {
-  font-size: 14px;
-  color: #595959;
-  letter-spacing: 1px;
-}
-.formulario .text-final span {
-  color: #D43E36;
-  font-weight: 700;
-}
 
-.contentRight__title {
-  font-size: 24px;
-  font-weight: 800;
-  color: #D43E36;
-}
-
-.stiker {
-  width: 27%;
-  position: absolute;
-  top: -11%;
-  right: -4%;
+@media (min-width: 0px) and (max-width: 768px) {
+  /*Logo*/
+  .logoMasuno {
+    width: 10%;
+  }
+  /*Textos de titulos*/
+  .text-titulos {
+    font-size: 42px;
+    font-weight: 700;
+  }
+  .text-titulos span {
+    font-size: 26px;
+  }
+  .text-fecha {
+    font-size: 18px;
+  }
 }
 
 /*# sourceMappingURL=header.css.map */
