--- a/sass/section.scss
+++ b/sass/section.scss
@@ -22,8 +22,8 @@ hr{
   
   padding: 0 30px 0 30px;
 }
-.section__title{
-  font-size: 32px;
+.section__title h1{
+  // font-size: 32px;
   font-weight: 700;
   color: #1A36A8;
   line-height: 43.58px;
@@ -78,4 +78,7 @@ hr{
 .indicator{
   bottom: 16%;
   left: -76%;
+}
+.subrayado__cyber{
+  width: 35%;
 }
